# Codex-Pro-Max

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md
.github/workflows/: release-assets.yml
apps/codex-pro-max-launcher/: Cargo.toml  build.rs
apps/codex-pro-max-launcher/src/: main.rs
apps/codex-pro-max-manager/: index.html  package-lock.json  package.json
apps/codex-pro-max-manager/src/: App.tsx  main.tsx  styles.css
apps/codex-pro-max-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/codex-pro-max-manager/src-tauri/src/: commands.rs  install.rs  lib.rs  main.rs
apps/codex-pro-max-manager/src-tauri/tests/: windows_subsystem.rs
assets/inject/: renderer-inject.js
crates/codex-pro-max-core/: Cargo.toml
crates/codex-pro-max-core/src/: ads.rs  app_paths.rs  assets.rs  cdp.rs  cli_wrapper.rs  http_client.rs  launcher.rs  lib.rs  model_catalog.rs  ports.rs  protocol_proxy.rs  relay_config.rs  routes.rs  script_market.rs  settings.rs  status.rs  update.rs  version.rs  watcher.rs  windows_integration.rs
crates/codex-pro-max-core/tests/: ads.rs  bridge_routes.rs  cdp_bridge.rs  cli_wrapper.rs  installers.rs  launcher.rs  model_catalog.rs  protocol_proxy.rs  relay_config.rs  updater.rs  upstream_worktree.rs  watcher.rs  zed_remote.rs
crates/codex-pro-max-data/: Cargo.toml
crates/codex-pro-max-data/src/: lib.rs  markdown.rs  provider_sync.rs  storage.rs
crates/codex-pro-max-data/tests/: markdown.rs  provider_sync.rs  storage_adapter.rs
scripts/installer/macos/: package-dmg.sh
(+6 files in other folders)
