[package]
name = "codex-pro-max-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codex-pro-max"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
codex-pro-max-core = { path = "../../crates/codex-pro-max-core" }
codex-pro-max-data = { path = "../../crates/codex-pro-max-data" }
directories.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
