[package]
name = "codex-pro-max-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "codex_pro_max_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-pro-max-manager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
codex-pro-max-core = { path = "../../../crates/codex-pro-max-core" }
codex-pro-max-data = { path = "../../../crates/codex-pro-max-data" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile.workspace = true
